--- a/index.html
+++ b/index.html
@@ -6,27 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylsheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/fontawesome.min.css">
 </head>
 <body>
   <header>
-    <h1></h1>
+    <h1><i class="fa fa-cat"></i>ColmarAcademy</h1>
     <nav>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Online</li>
+        <li>On Campus</li>
+        <li>For Companies</li>
+        <li>Sign-in</li>
       </ul>
     </nav>
   </header>
   <section class="link">
     <div>
-      <img>
+      <img src="./media/images/banner.jpg">
     </div>
     <div>
-      <h1></h1>
-      <p></p>
-      <button></button>
+      <h1>Learn something new everyday</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipscing elit.</p>
+      <button>Start here</button>
     </div>
   </section>
   <section class="campus-info"></section>
