--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </nav>
   </header>
   <section class="link">
-    <div>
-      <img src="./media/images/banner.jpg">
+    <div class="banner_img">
+      <img class="study_img" src="./media/images/banner.jpg" alt="three people studying">
     </div>
-    <div>
-      <h1>Learn something new everyday</h1>
+    <div class="banner_txt">
+      <h1>Learn something new every day</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipscing elit.</p>
       <button>Start here</button>
     </div>
